force-app/main/default/objects/Makro_Channel_EC_Sales_Detail__c/fields/article__c.field-meta.xml
<CustomField>
    <fullName>article__c</fullName>
    <label>article</label>
    <length>255</length>
    <type>Text</type>
</CustomField>