force-app/main/default/objects/Makro_Channel_EC_Sales_Detail__c/fields/article_name__c.field-meta.xml
<CustomField>
    <fullName>article_name__c</fullName>
    <label>article_name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>