force-app/main/default/objects/Makro_Channel_EC_Sales_Detail__c/fields/billing_type__c.field-meta.xml
<CustomField>
    <fullName>billing_type__c</fullName>
    <label>billing_type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>