force-app/main/default/objects/Makro_Channel_EC_Sales_Detail__c/fields/group__c.field-meta.xml
<CustomField>
    <fullName>group__c</fullName>
    <label>group_</label>
    <length>255</length>
    <type>Text</type>
</CustomField>