force-app/main/default/objects/Makro_Channel_EC_Sales_Detail__c/fields/load_dt__c.field-meta.xml
<CustomField>
    <fullName>load_dt__c</fullName>
    <label>load_dt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>