force-app/main/default/objects/Makro_Channel_EC_Sales_Detail__c/fields/loaddt__c.field-meta.xml
<CustomField>
    <fullName>loaddt__c</fullName>
    <label>loaddt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>