force-app/main/default/objects/Makro_Channel_EC_Sales_Detail__c/fields/ly_sales__c.field-meta.xml
<CustomField>
    <fullName>ly_sales__c</fullName>
    <label>ly_sales</label>
    <length>255</length>
    <type>Text</type>
</CustomField>