force-app/main/default/objects/Makro_Channel_EC_Sales_Detail__c/fields/vendor_article_numbe__c.field-meta.xml
<CustomField>
    <fullName>vendor_article_numbe__c</fullName>
    <label>vendor_article_numbe</label>
    <length>255</length>
    <type>Text</type>
</CustomField>